= Vantiv eCommerce Chargeback SDK CHANGELOG

== Version 2.1.2 (April 24, 2018)
* Fixed error handling for Document Retrieve request
* Fixed certification test cases
* Internal code refactoring

== Version 2.1.1 (April 12, 2018)
* Renamed functions:
  getActivityByActionable => getActionableChargebacks
  getActivityByCaseId     => getChargebackByCaseId
  getActivityByToken      => getChargebacksByToken
  getActivityByCardNum    => getChargebacksByCardNumber
  getActivityByARN        => getChargebacksByARN

== Version 2.1.0 (April 12, 2018)
* Initial release